3-kubernetes/01-http-echo/echo-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-deployment
  namespace: echo
  labels:
    app: echo
    env: test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: echo
      env: test
  template:
    metadata:
      labels:
        app: echo
        env: test
    spec:
      containers:
        - name: echo
          image: ghcr.io/rasla/http-https-echo:nodejs  # mendhak/http-https-echo:15
          ports:
            - containerPort: 8080
            - containerPort: 8443
