3-kubernetes/01-http-echo/echo-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: echo-service
  namespace: echo
spec:
  selector:
    app: echo
    env: test
  ports:
    - name: http
      port: 80
      targetPort: 8080
