3-kubernetes/01-http-echo/echo-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
  namespace: echo
spec:
  rules:
    - http:
        paths:
          - path: /echo/
            backend:
              serviceName: echo-service
              servicePort: 80
